# openwec

./: CHANGELOG.md  Cargo.toml
.github/workflows/: make-deb-bookworm-pkg.yml  make-deb-bullseye-pkg.yml  make-deb-pkg.yml  release-draft.yml
build-pkg/: Dockerfile-debian-bookworm  Dockerfile-debian-bullseye
cli/: Cargo.toml
common/: Cargo.toml
debian/: Dockerfile
server/: Cargo.toml
server/debian/: postinst
