[workspace]

members = [
    "common",
    "server",
    "cli"
]

[package.metadata.deb]
maintainer = "William Bruneau <william.bruneau@cea.fr>"
copyright = "2023, CEA <william.bruneau@cea.fr>"
extended-description = """\
An implementation of a Windows Event Collector\
server running on GNU/Linux."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/openwec", "usr/bin/", "755"],
    ["target/release/openwecd", "usr/bin/", "755"],
    ["openwec.conf.sample.toml", "etc/openwec.toml", "644"],
    ["openwec.conf.sample.toml", "usr/share/doc/openwec/", "644"],
    ["README.md", "usr/share/doc/openwec/", "644"],
    ["doc/*", "usr/share/doc/openwec/doc/", "644"],
]
conf-files = ["/etc/openwec.toml"]
maintainer-scripts = "debian/"
systemd-units = { enable = false }
